# otari-sandbox-container

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-push.yml
sandbox/: __init__.py  bash.py  exec_server.py  files.py  limits.py  models.py  platform_tools.py  runner.py  runner_pool.py  sessions.py  text_editor.py
tests/: conftest.py  test_exec_server.py  test_files.py  test_limits.py  test_platform_tools.py  test_programmatic_e2e.py  test_runner_pool.py  test_sessions.py  test_text_editor.py
